--- a/src/index.css
+++ b/src/index.css
@@ -2038,10 +2038,6 @@ html {
 
 .range-properties .overrideActive {
   position: relative;
-  /* color: var(--color-purple-500)!important; */
-  border-color: var(--color-purple-500)!important;
-  padding-left: 36px;
-  
 }
 .range-properties *:has(+ .overrideActive) {
   position: relative;
@@ -2049,12 +2045,10 @@ html {
 .range-properties *:has(+ .overrideActive) input{
 }
 .range-properties *:has(+ .overrideActive)::before {
-  content: "";
+  /* content: ""; */
   position: absolute;
   top: 32px;
   left: 12px;
-  /* width: 100%; */
-  /* height: 100%; */
   background-color: var(--color-purple-500);;
   opacity: 1;
   color: white;
@@ -2066,25 +2060,29 @@ html {
 }
 
 
-.sizes-properties .overrideActive {
-  position: relative;
-  /* color: var(--color-purple-500)!important; */
+.range-properties .form-field:has(.overrideActive)  {
+  border-color: var(--color-purple-500)!important;
+}
+.sizes-properties .form-field:has(.overrideActive)  {
   border-color: var(--color-orange-500)!important;
-  padding-left: 36px;
-  
+}
+.form-field .overrideActive {
+  position: relative;
+}
+.range-properties .form-field .overrideActive {
+  background-color: var(--color-purple-100);
+}
+.sizes-properties .form-field .overrideActive {
+  background-color: var(--color-orange-100);
 }
 .sizes-properties *:has(+ .overrideActive) {
   position: relative;
 }
-.sizes-properties *:has(+ .overrideActive) input{
-}
 .sizes-properties *:has(+ .overrideActive)::before {
-  content: "";
+  /* content: ""; */
   position: absolute;
   top: 32px;
   left: 12px;
-  /* width: 100%; */
-  /* height: 100%; */
   background-color: var(--color-orange-500);;
   opacity: 1;
   color: white;
@@ -2110,3 +2108,10 @@ html {
   text-align: right;
   top: 0;
 } 
+
+.range-properties .overrideSelf.collapsed {
+  border: 1px solid var(--color-purple-500);
+}
+.sizes-properties .overrideSelf.collapsed {
+  border: 1px solid var(--color-orange-500);
+}
