--- a/src/index.css
+++ b/src/index.css
@@ -1185,6 +1185,9 @@
     color: var(--color-gray-900);
   }
 
+  .text-orange-500 {
+    color: var(--color-orange-500);
+  }
   .text-orange-700 {
     color: var(--color-orange-700);
   }
@@ -2123,4 +2126,28 @@ html {
 .selector {
   font-weight: ;
 }
-  
+.customTooltip:before{
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: calc(100% + 4px);
+  transform: translate(-50%, -50%);
+  border: 4px solid transparent;
+  border-left-color: var(--color-gray-900);
+}
+.customTooltip{
+  position: absolute;
+  right: calc(100% + 10px) ;
+  transform: translateX(20px);
+  opacity: 0;
+  transition: all .1s ease-in-out;
+  z-index: 99999;
+}
+*:hover + .customTooltip{
+  opacity: 1;
+  transform: none;
+}
+.infoPurple{
+  border: 1px solid var(--color-purple-500);
+  border-radius: 8px;
+}
