Added size selector in top nav

--- a/src/index.css
+++ b/src/index.css
@@ -664,6 +664,9 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
 
   .w-80 {
     width: calc(var(--spacing) * 80);
@@ -2256,3 +2259,10 @@ button {
 .tree-lvl2-hasChildren{
   font-weight: bold;
 }
+
+.visible {
+  visibility: visible;
+} 
+.invisible {
+  visibility: hidden;
+}   
