--- a/src/index.css
+++ b/src/index.css
@@ -514,6 +514,9 @@
   .z-50 {
     z-index: 50;
   }
+  .z-9999 {
+    z-index: 9999;
+  }
 
   .my-1 {
     margin-block: calc(var(--spacing) * 1);
