--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,11 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.top-nav button{
+  cursor: pointer!important;
+}
+
+.top-nav__size{
+  cursor: pointer!important;
+}
